[package]
name = "pack"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly bits <=> bytes conversion."
repository = "https://github.com/hazae41/pack-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "0.2.83", default-features = false, features= ["std"] }