[package]
name = "naberius"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly bits processing utilities."
repository = "https://github.com/hazae41/naberius-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false, features= ["std"] }
